samples/_failures_safe/1761497008_aa54f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_708304fc.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_708304fc.c:186:40: error: expected ‘;’ at end of input
  186 |                 graph->edges[i]->target
      |                                        ^
      |                                        ;
./samples/SAFE/__tmp_708304fc.c:186:17: error: expected declaration or statement at end of input
  186 |                 graph->edges[i]->target
      |                 ^~~~~
./samples/SAFE/__tmp_708304fc.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_708304fc.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_708304fc.c:186:17: error: expected declaration or statement at end of input
